Uploaded image for project: 'Apache HAWQ (Retired)'
  1. Apache HAWQ (Retired)
  2. HAWQ-637

RM process is error if property is missing in hawq-site.xml

    XMLWordPrintableJSON

Details

    Description

      start hawq in yarn mode,yarn RM address is not configured in hawq-site.xml

      scripts show start hawq successfully, but RM process is not correct.
      ```
      gpadmin 235458 235448 0 08:48 ? 00:00:00 postgres: port 5432, master resource manager con4 error exit in 2m 0s
      ```
      ```
      x86_64 libidn-1.18-2.el6.x86_64 nss-softokn-freebl-3.12.9-11.el6.x86_64 pam-1.1.1-13.el6.x86_64 zlib-1.2.3-29.el6.x86_64
      (gdb) bt
      #0 0x000000366e6e14d3 in __select_nocancel () from /lib64/libc.so.6
      #1 0x0000000000b885d0 in pg_usleep (microsec=30000000) at pgsleep.c:43
      #2 0x00000000009dd9d8 in elog_debug_linger (edata=0x117c6c0) at elog.c:4129
      #3 0x00000000009d6047 in errfinish (dummy=0) at elog.c:597
      #4 0x00000000009d86b4 in elog_finish (elevel=21, fmt=0xdb4de0 "YARN mode resource broker failed to start resource broker process. error=%d") at elog.c:1463
      #5 0x0000000000a5e96b in RB_LIBYARN_start (isforked=1 '\001') at resourcebroker_LIBYARN.c:96
      #6 0x0000000000a5d924 in RB_start (isforked=1 '\001') at resourcebroker_API.c:58
      #7 0x0000000000a9417f in MainHandlerLoop () at resourcemanager.c:545
      #8 0x0000000000a940d0 in ResManagerMainServer2ndPhase () at resourcemanager.c:513
      #9 0x0000000000a93b64 in ResManagerMain (argc=3, argv=0x7fffdefaa6f0) at resourcemanager.c:332
      #10 0x0000000000a93d72 in ResManagerProcessStartup () at resourcemanager.c:400
      #11 0x000000000089525f in CommenceNormalOperations () at postmaster.c:3673
      #12 0x0000000000895c77 in do_reaper () at postmaster.c:4021
      #13 0x000000000089203b in ServerLoop () at postmaster.c:2136
      #14 0x00000000008911ae in PostmasterMain (argc=9, argv=0x3407940) at postmaster.c:1454
      #15 0x00000000007aaf1a in main (argc=9, argv=0x3407940) at main.c:226

      The fix is to let RB and RM process work normally, but RB can't register itself to Hadoop Yarn RM, since configure in hawk-site.xml is not correct.

      Attachments

        Activity

          People

            wlin Wen Lin
            wlin Wen Lin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: