HAWQ-637. Fix RM process error if property is missing or invalid in hawq-site.xml with Yarn mode.